--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         .social-link img {
             width: 24px;
             height: 24px;
-            filter: grayscale(100%) brightness(0) invert(0.2);
+            filter: brightness(0.2);
         }
 
         .social-link:hover img {
