--- a/index.html
+++ b/index.html
@@ -395,6 +395,29 @@
             color: var(--text-light);
         }
 
+        /* Classical Image Section */
+        .classical-image-section {
+            padding: 40px 20px 60px;
+            text-align: center;
+        }
+
+        .classical-image {
+            max-width: 100%;
+            height: auto;
+            max-height: 400px;
+            border-radius: 8px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+            opacity: 0;
+            animation: fadeIn 1s ease 4s forwards;
+        }
+
+        .image-caption {
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: var(--text-light);
+            font-style: italic;
+        }
+
         /* Floating particles animation */
         .particles {
             position: fixed;
@@ -507,6 +530,12 @@
                 The small man understands what is profitable."
             </div>
             <div class="quote-author">— Confucius, The Analects</div>
+        </section>
+
+        <!-- Classical Image -->
+        <section class="classical-image-section">
+            <img src="confucius-teaching.jpg" alt="Confucius teaching disciples" class="classical-image">
+            <p class="image-caption">The Master beneath the apricot tree, where wisdom flows like water</p>
         </section>
 
         <!-- Links Section -->
