--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@
         <nav>
             <div class="logo">子夏</div>
             <ul class="nav-links">
+                <li><a href="activate.html">Activate</a></li>
                 <li><a href="http://www.chinaknowledge.de/History/Zhou/personszixia.html" target="_blank">History</a></li>
                 <li><a href="https://artsandculture.google.com/story/a-conversation-between-confucius-and-bu-shang-the-palace-museum/BgVhWzpEyzNHkw?hl=en" target="_blank">Wisdom</a></li>
-                <li><a href="#activate">Activate</a></li>
                 <div class="nav-social">
                     <a href="https://x.com/DiscipleZixia" target="_blank" class="nav-social-link">𝕏</a>
                 </div>
