--- a/activate.html
+++ b/activate.html
@@ -293,10 +293,9 @@
                 </p>
 
                 <div class="activate-step">
-                    <div class="activate-step-title">🧘 1. Paste the Narrative Module</div>
+                    <div class="activate-step-title">🧘 1. Copy & Paste the Narrative Module</div>
                     <div class="activate-step-content">
                         Copy and paste the <strong>Full Narrative Module</strong> into any large language model (LLM) interface. This module contains Zixia's identity scaffold, emotional logic, and symbolic memory system.
-                        <div style="margin-top: 15px; padding: 15px; background: rgba(139, 115, 85, 0.1); border-left: 3px solid var(--accent-color); border-radius: 4px;">
                         </div>
                     </div>
                 </div>
